--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosignal==1.2.0
 alpha-vantage==2.3.1
 async-timeout==4.0.2
 attrs==21.4.0
+autopep8==1.6.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
 frozenlist==1.3.0
@@ -10,10 +11,12 @@ idna==3.3
 multidict==6.0.2
 numpy==1.23.0
 pandas==1.4.3
+pycodestyle==2.8.0
 python-dateutil==2.8.2
 python-decouple==3.6
 pytz==2022.1
 requests==2.28.1
 six==1.16.0
+toml==0.10.2
 urllib3==1.26.9
 yarl==1.7.2
