--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,52 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
 alpha-vantage==2.3.1
+asttokens==2.0.5
 async-timeout==4.0.2
 attrs==21.4.0
 autopep8==1.6.0
+backcall==0.2.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
+colorama==0.4.5
+debugpy==1.6.2
+decorator==5.1.1
+entrypoints==0.4
+executing==0.8.3
 frozenlist==1.3.0
 idna==3.3
+ipykernel==6.15.1
+ipython==8.4.0
+jedi==0.18.1
+jupyter-client==7.3.4
+jupyter-core==4.11.1
+matplotlib-inline==0.1.3
 multidict==6.0.2
+nest-asyncio==1.5.5
+numexpr==2.8.3
 numpy==1.23.0
+packaging==21.3
 pandas==1.4.3
+parso==0.8.3
+pickleshare==0.7.5
+prompt-toolkit==3.0.30
+psutil==5.9.1
+pure-eval==0.2.2
 pycodestyle==2.8.0
+Pygments==2.12.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 python-decouple==3.6
 pytz==2022.1
+pywin32==304
+pyzmq==23.2.0
 requests==2.28.1
 six==1.16.0
+stack-data==0.3.0
+tables==3.7.0
 toml==0.10.2
+tornado==6.2
+traitlets==5.3.0
 urllib3==1.26.9
+wcwidth==0.2.5
 yarl==1.7.2
