--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,64 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
 alpha-vantage==2.3.1
-asttokens==2.0.5
+asttokens==2.0.8
 async-timeout==4.0.2
-attrs==21.4.0
-autopep8==1.6.0
+attrs==22.1.0
+autopep8==1.7.0
 backcall==0.2.0
-certifi==2022.6.15
-charset-normalizer==2.1.0
+backtrader==1.9.76.123
+certifi==2022.9.14
+charset-normalizer==2.1.1
 colorama==0.4.5
-debugpy==1.6.2
+contourpy==1.0.5
+cycler==0.11.0
+debugpy==1.6.3
 decorator==5.1.1
+decouple==0.0.7
 entrypoints==0.4
-executing==0.8.3
-frozenlist==1.3.0
-idna==3.3
-ipykernel==6.15.1
-ipython==8.4.0
+executing==1.0.0
+fonttools==4.37.2
+frozenlist==1.3.1
+idna==3.4
+ipykernel==6.15.3
+ipython==8.5.0
 jedi==0.18.1
-jupyter-client==7.3.4
+joblib==1.2.0
 jupyter-core==4.11.1
-matplotlib-inline==0.1.3
+jupyter_client==7.3.5
+kiwisolver==1.4.4
+matplotlib==3.6.0
+matplotlib-inline==0.1.6
 multidict==6.0.2
 nest-asyncio==1.5.5
-numexpr==2.8.3
-numpy==1.23.0
+numpy==1.23.3
 packaging==21.3
-pandas==1.4.3
+pandas==1.4.4
 parso==0.8.3
 pickleshare==0.7.5
-prompt-toolkit==3.0.30
-psutil==5.9.1
+Pillow==9.2.0
+prompt-toolkit==3.0.31
+psutil==5.9.2
 pure-eval==0.2.2
-pycodestyle==2.8.0
-Pygments==2.12.0
+pycodestyle==2.9.1
+Pygments==2.13.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
-python-decouple==3.6
-pytz==2022.1
+pytz==2022.2.1
 pywin32==304
-pyzmq==23.2.0
+pyzmq==24.0.0
 requests==2.28.1
+scikit-learn==1.1.2
+scipy==1.9.1
 six==1.16.0
-stack-data==0.3.0
-tables==3.7.0
+sklearn==0.0
+stack-data==0.5.0
+ta==0.10.2
+threadpoolctl==3.1.0
 toml==0.10.2
 tornado==6.2
-traitlets==5.3.0
-urllib3==1.26.9
+traitlets==5.4.0
+urllib3==1.26.12
 wcwidth==0.2.5
-yarl==1.7.2
+xgboost==1.6.2
+yarl==1.8.1
