--- a/requirements.txt
+++ b/requirements.txt
@@ -14,11 +14,11 @@ contourpy==1.0.5
 cycler==0.11.0
 debugpy==1.6.3
 decorator==5.1.1
-decouple==0.0.7
 entrypoints==0.4
 executing==1.0.0
 fonttools==4.37.2
 frozenlist==1.3.1
+greenlet==1.1.3
 idna==3.4
 ipykernel==6.15.3
 ipython==8.5.0
@@ -27,9 +27,11 @@ joblib==1.2.0
 jupyter-core==4.11.1
 jupyter_client==7.3.5
 kiwisolver==1.4.4
+lxml==4.9.1
 matplotlib==3.6.0
 matplotlib-inline==0.1.6
 multidict==6.0.2
+multitasking==0.0.11
 nest-asyncio==1.5.5
 numpy==1.23.3
 packaging==21.3
@@ -42,8 +44,10 @@ psutil==5.9.2
 pure-eval==0.2.2
 pycodestyle==2.9.1
 Pygments==2.13.0
+PyMySQL==1.0.2
 pyparsing==3.0.9
 python-dateutil==2.8.2
+python-decouple==3.6
 pytz==2022.2.1
 pywin32==304
 pyzmq==24.0.0
@@ -52,6 +56,7 @@ scikit-learn==1.1.2
 scipy==1.9.1
 six==1.16.0
 sklearn==0.0
+SQLAlchemy==1.4.41
 stack-data==0.5.0
 ta==0.10.2
 threadpoolctl==3.1.0
@@ -62,3 +67,4 @@ urllib3==1.26.12
 wcwidth==0.2.5
 xgboost==1.6.2
 yarl==1.8.1
+yfinance==0.1.74
