add split_df_by_label_strat and jupyter script_CW8

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.analysis.extraPaths": [
-        "./src/get_data"
+        "./src/get_data",
+        "${workspaceFolder}/dataset_mngr/"
     ]
 }
