--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ fonttools==4.37.2
 frozenlist==1.3.1
 greenlet==1.1.3
 idna==3.4
+imbalanced-learn==0.10.1
+imblearn==0.0
 ipykernel==6.15.3
 ipython==8.5.0
 jedi==0.18.1
