--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,122 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
 alpha-vantage==2.3.1
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 asttokens==2.0.8
 async-timeout==4.0.2
 attrs==22.1.0
 autopep8==1.7.0
+Babel==2.12.1
 backcall==0.2.0
 backtrader==1.9.76.123
+beautifulsoup4==4.12.2
+bleach==6.0.0
 Boruta==0.3
 certifi==2022.9.14
+cffi==1.15.1
 charset-normalizer==2.1.1
+click==7.1.2
+colabcode==0.3.0
 colorama==0.4.5
 contourpy==1.0.5
 cycler==0.11.0
 debugpy==1.6.3
 decorator==5.1.1
+defusedxml==0.7.1
 entrypoints==0.4
 executing==1.0.0
+fastjsonschema==2.17.1
 fonttools==4.37.2
 frozenlist==1.3.1
 greenlet==1.1.3
+h11==0.14.0
 idna==3.4
 imbalanced-learn==0.10.1
 imblearn==0.0
 ipykernel==6.15.3
 ipython==8.5.0
+ipython-genutils==0.2.0
 jedi==0.18.1
+Jinja2==3.1.2
 joblib==1.2.0
-jupyter-core==4.11.1
-jupyter_client==7.3.5
+json5==0.9.14
+jsonschema==4.17.3
+jupyter-server==1.24.0
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+jupyterlab==3.0.7
+jupyterlab-pygments==0.2.2
+jupyterlab_server==2.22.1
 kiwisolver==1.4.4
 lxml==4.9.1
+MarkupSafe==2.1.2
 matplotlib==3.6.0
 matplotlib-inline==0.1.6
+mistune==2.0.5
 multidict==6.0.2
 multitasking==0.0.11
-nest-asyncio==1.5.5
+nbclassic==0.3.7
+nbclient==0.8.0
+nbconvert==7.4.0
+nbformat==5.8.0
+nest-asyncio==1.4.3
+notebook==6.4.5
+notebook_shim==0.2.3
 numexpr==2.8.3
 numpy==1.23.3
 packaging==21.3
 pandas==1.4.4
+pandocfilters==1.5.0
 parso==0.8.3
 patsy==0.5.3
 pickleshare==0.7.5
 Pillow==9.2.0
+platformdirs==3.5.1
+prometheus-client==0.16.0
 prompt-toolkit==3.0.31
 psutil==5.9.2
 pure-eval==0.2.2
 pycodestyle==2.9.1
+pycparser==2.21
 Pygments==2.13.0
 PyMySQL==1.0.2
+pyngrok==6.0.0
 pyparsing==3.0.9
+pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-decouple==3.6
 pytz==2022.2.1
 pywin32==304
+pywinpty==2.0.10
+PyYAML==6.0
 pyzmq==24.0.0
 requests==2.28.1
 scikit-learn==1.1.2
 scipy==1.9.1
 seaborn==0.12.2
+Send2Trash==1.8.2
 six==1.16.0
 sklearn==0.0
+sniffio==1.3.0
+soupsieve==2.4.1
 SQLAlchemy==1.4.41
 stack-data==0.5.0
 statsmodels==0.13.5
 ta==0.10.2
 tables==3.7.0
+terminado==0.17.1
 threadpoolctl==3.1.0
+tinycss2==1.2.1
 toml==0.10.2
 tornado==6.2
 traitlets==5.4.0
 urllib3==1.26.12
+uvicorn==0.13.1
 wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.5.2
 xgboost==1.6.2
 yarl==1.8.1
 yfinance==0.1.74
