--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==1.4.0
 aiohttp==3.8.1
 aiosignal==1.2.0
 alpha-vantage==2.3.1
@@ -5,6 +6,7 @@ anyio==3.6.2
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asttokens==2.0.8
+astunparse==1.6.3
 async-timeout==4.0.2
 attrs==22.1.0
 autopep8==1.7.0
@@ -14,6 +16,7 @@ backtrader==1.9.76.123
 beautifulsoup4==4.12.2
 bleach==6.0.0
 Boruta==0.3
+cachetools==5.3.1
 certifi==2022.9.14
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -28,16 +31,24 @@ defusedxml==0.7.1
 entrypoints==0.4
 executing==1.0.0
 fastjsonschema==2.17.1
+flatbuffers==23.5.26
 fonttools==4.37.2
 frozenlist==1.3.1
+gast==0.4.0
+google-auth==2.20.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
 greenlet==1.1.3
+grpcio==1.54.2
 h11==0.14.0
+h5py==3.8.0
 idna==3.4
 imbalanced-learn==0.10.1
 imblearn==0.0
 ipykernel==6.15.3
 ipython==8.5.0
 ipython-genutils==0.2.0
+jax==0.4.12
 jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.2.0
@@ -49,12 +60,16 @@ jupyter_core==5.3.0
 jupyterlab==3.0.7
 jupyterlab-pygments==0.2.2
 jupyterlab_server==2.22.1
+keras==2.12.0
 kiwisolver==1.4.4
+libclang==16.0.0
 lxml==4.9.1
+Markdown==3.4.3
 MarkupSafe==2.1.2
 matplotlib==3.6.0
 matplotlib-inline==0.1.6
 mistune==2.0.5
+ml-dtypes==0.2.0
 multidict==6.0.2
 multitasking==0.0.11
 nbclassic==0.3.7
@@ -66,6 +81,8 @@ notebook==6.4.5
 notebook_shim==0.2.3
 numexpr==2.8.3
 numpy==1.23.3
+oauthlib==3.2.2
+opt-einsum==3.3.0
 packaging==21.3
 pandas==1.4.4
 pandocfilters==1.5.0
@@ -76,8 +93,11 @@ Pillow==9.2.0
 platformdirs==3.5.1
 prometheus-client==0.16.0
 prompt-toolkit==3.0.31
+protobuf==4.23.3
 psutil==5.9.2
 pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycodestyle==2.9.1
 pycparser==2.21
 Pygments==2.13.0
@@ -93,6 +113,8 @@ pywinpty==2.0.10
 PyYAML==6.0
 pyzmq==24.0.0
 requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
 scikit-learn==1.1.2
 scipy==1.9.1
 seaborn==0.12.2
@@ -106,17 +128,27 @@ stack-data==0.5.0
 statsmodels==0.13.5
 ta==0.10.2
 tables==3.7.0
+tensorboard==2.12.3
+tensorboard-data-server==0.7.1
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
 terminado==0.17.1
 threadpoolctl==3.1.0
 tinycss2==1.2.1
 toml==0.10.2
 tornado==6.2
 traitlets==5.4.0
+typing_extensions==4.6.3
 urllib3==1.26.12
 uvicorn==0.13.1
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.5.2
+Werkzeug==2.3.6
+wrapt==1.14.1
 xgboost==1.6.2
 yarl==1.8.1
 yfinance==0.1.74
