--- a/requirements.txt
+++ b/requirements.txt
@@ -115,6 +115,7 @@ pyzmq==24.0.0
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
+scikeras==0.11.0
 scikit-learn==1.1.2
 scipy==1.9.1
 seaborn==0.12.2
