--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.8.1
 aiosignal==1.2.0
 alpha-vantage==2.3.1
 anyio==3.6.2
+appdirs==1.4.4
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asttokens==2.0.8
@@ -33,6 +34,7 @@ executing==1.0.0
 fastjsonschema==2.17.1
 flatbuffers==23.5.26
 fonttools==4.37.2
+frozendict==2.3.10
 frozenlist==1.3.1
 gast==0.4.0
 google-auth==2.20.0
@@ -42,6 +44,7 @@ greenlet==1.1.3
 grpcio==1.54.2
 h11==0.14.0
 h5py==3.8.0
+html5lib==1.1
 idna==3.4
 imbalanced-learn==0.10.1
 imblearn==0.0
@@ -88,6 +91,7 @@ pandas==1.4.4
 pandocfilters==1.5.0
 parso==0.8.3
 patsy==0.5.3
+peewee==3.17.0
 pickleshare==0.7.5
 Pillow==9.2.0
 platformdirs==3.5.1
@@ -107,12 +111,12 @@ pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-decouple==3.6
-pytz==2022.2.1
+pytz==2023.3.post1
 pywin32==304
 pywinpty==2.0.10
 PyYAML==6.0
 pyzmq==24.0.0
-requests==2.28.1
+requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
 scikeras==0.11.0
@@ -151,4 +155,4 @@ Werkzeug==2.3.6
 wrapt==1.14.1
 xgboost==1.6.2
 yarl==1.8.1
-yfinance==0.1.74
+yfinance==0.2.33
