--- a/requirements.txt
+++ b/requirements.txt
@@ -68,13 +68,16 @@ kiwisolver==1.4.4
 libclang==16.0.0
 lxml==4.9.1
 Markdown==3.4.3
+markdown-it-py==3.0.0
 MarkupSafe==2.1.2
 matplotlib==3.6.0
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 mistune==2.0.5
 ml-dtypes==0.2.0
 multidict==6.0.2
 multitasking==0.0.11
+namex==0.0.8
 nbclassic==0.3.7
 nbclient==0.8.0
 nbconvert==7.4.0
@@ -86,6 +89,7 @@ numexpr==2.8.3
 numpy==1.23.3
 oauthlib==3.2.2
 opt-einsum==3.3.0
+optree==0.11.0
 packaging==21.3
 pandas==2.1.4
 pandocfilters==1.5.0
@@ -118,6 +122,7 @@ PyYAML==6.0
 pyzmq==24.0.0
 requests==2.31.0
 requests-oauthlib==1.3.1
+rich==13.7.1
 rsa==4.9
 scikeras==0.11.0
 scikit-learn==1.1.2
@@ -143,6 +148,7 @@ terminado==0.17.1
 threadpoolctl==3.1.0
 tinycss2==1.2.1
 toml==0.10.2
+tomli==2.0.1
 tornado==6.2
 traitlets==5.4.0
 typing_extensions==4.6.3
