--- a/requirements.txt
+++ b/requirements.txt
@@ -32,10 +32,12 @@ defusedxml==0.7.1
 entrypoints==0.4
 executing==1.0.0
 fastjsonschema==2.17.1
+filelock==3.14.0
 flatbuffers==23.5.26
 fonttools==4.37.2
 frozendict==2.3.10
 frozenlist==1.3.1
+fsspec==2024.6.0
 gast==0.4.0
 google-auth==2.20.0
 google-auth-oauthlib==1.0.0
@@ -48,6 +50,7 @@ html5lib==1.1
 idna==3.4
 imbalanced-learn==0.10.1
 imblearn==0.0
+intel-openmp==2021.4.0
 ipykernel==6.15.3
 ipython==8.5.0
 ipython-genutils==0.2.0
@@ -66,6 +69,7 @@ jupyterlab_server==2.22.1
 keras==2.12.0
 kiwisolver==1.4.4
 libclang==16.0.0
+lightning-utilities==0.11.3.post0
 lxml==4.9.1
 Markdown==3.4.3
 markdown-it-py==3.0.0
@@ -74,7 +78,9 @@ matplotlib==3.6.0
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==2.0.5
+mkl==2021.4.0
 ml-dtypes==0.2.0
+mpmath==1.3.0
 multidict==6.0.2
 multitasking==0.0.11
 namex==0.0.8
@@ -83,6 +89,7 @@ nbclient==0.8.0
 nbconvert==7.4.0
 nbformat==5.8.0
 nest-asyncio==1.4.3
+networkx==3.3
 notebook==6.4.5
 notebook_shim==0.2.3
 numexpr==2.8.3
@@ -115,6 +122,7 @@ pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-decouple==3.6
+pytorch-lightning==2.3.2
 pytz==2023.3.post1
 pywin32==304
 pywinpty==2.0.10
@@ -135,8 +143,10 @@ soupsieve==2.4.1
 SQLAlchemy==2.0.23
 stack-data==0.5.0
 statsmodels==0.13.5
+sympy==1.12.1
 ta==0.11.0
 tables==3.7.0
+tbb==2021.12.0
 tensorboard==2.12.3
 tensorboard-data-server==0.7.1
 tensorflow==2.12.0
@@ -149,9 +159,12 @@ threadpoolctl==3.1.0
 tinycss2==1.2.1
 toml==0.10.2
 tomli==2.0.1
+torch==2.3.1
+torchmetrics==1.4.0.post0
 tornado==6.2
+tqdm==4.66.4
 traitlets==5.4.0
-typing_extensions==4.6.3
+typing_extensions==4.12.2
 tzdata==2023.4
 urllib3==1.26.12
 uvicorn==0.13.1
