--- a/requirements.txt
+++ b/requirements.txt
@@ -99,6 +99,7 @@ opt-einsum==3.3.0
 optree==0.11.0
 packaging==21.3
 pandas==2.1.4
+pandas_ta==0.3.14b0
 pandocfilters==1.5.0
 parso==0.8.3
 patsy==0.5.3
@@ -145,6 +146,7 @@ stack-data==0.5.0
 statsmodels==0.13.5
 sympy==1.12.1
 ta==0.11.0
+TA-Lib==0.4.32
 tables==3.7.0
 tbb==2021.12.0
 tensorboard==2.12.3
@@ -160,6 +162,7 @@ tinycss2==1.2.1
 toml==0.10.2
 tomli==2.0.1
 torch==2.3.1
+torch-tb-profiler==0.4.3
 torchmetrics==1.4.0.post0
 tornado==6.2
 tqdm==4.66.4
