--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,8 @@ jupyterlab_server==2.22.1
 keras==2.12.0
 kiwisolver==1.4.4
 libclang==16.0.0
+lightgbm==4.5.0
+lightning==2.4.0
 lightning-utilities==0.11.3.post0
 lxml==4.9.1
 Markdown==3.4.3
@@ -99,7 +101,7 @@ opt-einsum==3.3.0
 optree==0.11.0
 packaging==21.3
 pandas==2.1.4
-pandas_ta==0.3.14b0
+pandas-ta==0.3.14b0
 pandocfilters==1.5.0
 parso==0.8.3
 patsy==0.5.3
@@ -123,7 +125,7 @@ pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-decouple==3.6
-pytorch-lightning==2.3.2
+pytorch-lightning==2.4.0
 pytz==2023.3.post1
 pywin32==304
 pywinpty==2.0.10
@@ -139,6 +141,7 @@ scipy==1.9.1
 seaborn==0.12.2
 Send2Trash==1.8.2
 six==1.16.0
+sklearn==0.0
 sniffio==1.3.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.23
@@ -161,9 +164,11 @@ threadpoolctl==3.1.0
 tinycss2==1.2.1
 toml==0.10.2
 tomli==2.0.1
-torch==2.3.1
+torch==2.4.0+cu124
 torch-tb-profiler==0.4.3
+torchaudio==2.4.0+cu124
 torchmetrics==1.4.0.post0
+torchvision==0.19.0+cu124
 tornado==6.2
 tqdm==4.66.4
 traitlets==5.4.0
